--- a/FrontEndAuth/java/pom.xml
+++ b/FrontEndAuth/java/pom.xml
@@ -105,11 +105,11 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
   			<groupId>com.twilio.sdk</groupId>
   			<artifactId>twilio</artifactId>
   			<version>7.37.2</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
